--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
     
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    
+   <!-- <link rel="stylesheet" href="../../css/estilos.css"> -->
 
     <style type="text/css">
       .platform-ios .manual-ios-statusbar-padding{
