--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,12 @@
     <script src="js/directives.js"></script>
      
     <script src="js/services.js"></script>
+    <!--angular-translate-->
+    <script src="lib/angular-translate/angular-translate.min.js"></script>
+    <script src="lib/angular-translate-storage-cookie/angular-translate-storage-cookie.min.js"></script>
+    <script src="lib/angular-translate-storage-local/angular-translate-storage-local.min.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
+    <!--/.angular-translate-->
     
 
     <!-- Only required for Tab projects w/ pages in multiple tabs 
